--- a/index.html
+++ b/index.html
@@ -71,10 +71,14 @@
     <button id="refreshBtn" onclick="manualRefresh()">🔄 刷新数据</button>
     <div class="updateHint" id="lastUpdateHint">—</div>
 
-    <!-- 教程与作者推特两个链接 -->
+    <!-- 教程与作者推特三个链接 -->
     <a class="tutorial-link"
        href="https://x.com/0xXIAOc/status/1932680505620902193" target="_blank">
       📘 提前授权 IDOL 教程入口
+    </a>
+    <a class="tutorial-link"
+       href="https://x.com/0xXIAOc/status/1929136552757830056" target="_blank">
+      💸 借 BNB 教程入口
     </a>
     <a class="tutorial-link"
        href="https://x.com/0xXIAOc" target="_blank">
