--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
            value="0xae8476d22b8e267a6f8aeb32c6050254e7a4f800"/>
 
     <label>投入 BNB</label>
-    <input id="userAmount" type="number" step="0.01" value="">
+    <!-- 默认 3 BNB，与原页面一致 -->
+    <input id="userAmount" type="number" step="0.01" value="3">
 
     <label>代币单价（USD，可自填；默认 0.01）</label>
     <input id="tokenPrice" type="number" step="0.00001" value="0.01"/>
@@ -99,9 +100,11 @@ const els = {};
  'refreshBtn','lastUpdateHint','targetShow']
  .forEach(id=>els[id]=document.getElementById(id));
 
+/* 把 Wei 转为 BNB（保留 4 位小数） */
 const formatWeiToBNB = wei =>
   `${(wei/10n**18n).toString()}.${(wei%10n**18n).toString().padStart(18,'0').slice(0,4)}`.replace(/\.?0+$/,'');
 
+/* 查询余额（多 RPC 兜底） */
 async function fetchBalance(addr){
   for(const rpc of CONFIG.RPC_NODES){
     try{
@@ -109,50 +112,57 @@ async function fetchBalance(addr){
       const res=await fetch(rpc,{method:'POST',headers:{'Content-Type':'application/json'},
         body:JSON.stringify({jsonrpc:'2.0',method:'eth_getBalance',params:[addr,'latest'],id:1}),signal:ctl.signal});
       clearTimeout(t);
-      if(!res.ok) throw new Error();
-      const d=await res.json();
-      if(d.result) return BigInt(d.result);
+      if(res.ok){
+        const d=await res.json();
+        if(d.result) return BigInt(d.result);
+      }
     }catch{}
   }
   throw new Error('所有 RPC 节点均不可用');
 }
 
+/* 主刷新逻辑 */
 async function updateBalanceAndCalc(){
   if(Date.now()>=CONFIG.END_TIME) return;
 
   const addr  = els.targetAddress.value.trim();
   const user  = parseFloat(els.userAmount.value);
   const price = parseFloat(els.tokenPrice.value);
-  const needCalc = !isNaN(user)&&user>0&&!isNaN(price)&&price>0;
+  const calc  = !isNaN(user)&&user>0&&!isNaN(price)&&price>0;
 
   try{
     els.refreshBtn.disabled=true;els.refreshBtn.textContent='⏳ 刷新中…';
+
+    /* 1️⃣ 查询地址余额 */
     const wei = await fetchBalance(addr);
     const bnb = formatWeiToBNB(wei);
     els.bnbBalance.textContent = `${bnb} BNB`;
 
-    if(needCalc){
-      const dep   = parseFloat(bnb);
+    /* 2️⃣ 若输入完整则计算分配 */
+    if(calc){
+      const dep = parseFloat(bnb);
       els.multiplier.textContent = (dep/CONFIG.TOTAL_TARGET_BNB).toFixed(2);
       els.targetShow.textContent = `${CONFIG.TOTAL_TARGET_BNB} BNB`;
 
-      const share = dep ? user/dep : 0;
-      const tokens= share * CONFIG.TOTAL_TOKENS;
+      const share  = dep ? user/dep : 0;
+      const tokens = share * CONFIG.TOTAL_TOKENS;
+
       els.userInput.textContent   = user.toFixed(2);
       els.percent.textContent     = (share*100).toFixed(4);
       els.cudisAmount.textContent = tokens.toFixed(2);
       els.usdValue.textContent    = (tokens*price).toFixed(2);
-      els.resultBox.style.display='block';
+      els.resultBox.style.display = 'block';
     }
 
     els.lastUpdateHint.textContent =
       `最后更新时间：${new Date().toLocaleTimeString('zh-CN',{hour12:false})}`;
-  }catch(e){alert(e.message);}
+  }catch(e){ alert(e.message); }
   finally{
     els.refreshBtn.disabled=false;els.refreshBtn.textContent='🔄 刷新数据';
   }
 }
 
+/* 倒计时 & 进度条 */
 function updateCountdown(){
   const now=Date.now();
   if(now<CONFIG.START_TIME){
@@ -164,19 +174,20 @@ function updateCountdown(){
     clearInterval(balanceTimer);clearInterval(countdownTimer);
     els.refreshBtn.disabled=true;els.refreshBtn.textContent='⏹ 已结束';
   }else{
-    const diff=CONFIG.END_TIME-now;
-    els.countdownText.textContent=`剩余时间：${Math.floor(diff/36e5)}小时 ${Math.floor(diff%36e5/6e4)}分`;
+    const diff = CONFIG.END_TIME - now;
+    els.countdownText.textContent = `剩余时间：${Math.floor(diff/36e5)}小时 ${Math.floor(diff%36e5/6e4)}分`;
     els.progressBar.style.width =
       `${((now-CONFIG.START_TIME)/(CONFIG.END_TIME-CONFIG.START_TIME)*100).toFixed(2)}%`;
   }
 }
 
+/* 初始化 */
 function manualRefresh(){updateBalanceAndCalc();}
 let balanceTimer,countdownTimer;
 window.addEventListener('load',()=>{
   updateBalanceAndCalc();updateCountdown();
-  balanceTimer=setInterval(updateBalanceAndCalc,CONFIG.REFRESH_INTERVAL_MS);
-  countdownTimer=setInterval(updateCountdown,1000);
+  balanceTimer   = setInterval(updateBalanceAndCalc,CONFIG.REFRESH_INTERVAL_MS);
+  countdownTimer = setInterval(updateCountdown,1000);
 });
 </script>
 </body>
