--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <span class="hintPrefix">提示：</span>
         <span class="hintMsg">
           18点结束后，未被用于认购的BNB可以退回，就扣除几U的成本。<br>
-          Pre‑TGE 获得的代币会进入项目方设定的锁定期，预估等存款活动结束后开放。
+          Pre‑TGE 获得的代币会进入项目方设定的锁定期，预估等Boost存款活动结束后开放。
         </span>
       </div>
 
